Avoid creating render surface if animating same value opacity.

We should avoid creating render surface if we are animating opacity with
the same value of 1.0f. The opacity value not equal to 1.0f has already
been handled in the code. Therefore, in this cl, we modify the IsThreaded
to not create cc::Animation if it is animating with same start and target
values.

Bug: 764575
Test: local with flag ui-show-composited-layer-borders=renderpass
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I3b6044382d395c831e6e1abf627ead570d9715c1
Reviewed-on: https://chromium-review.googlesource.com/663535
Reviewed-by: Ali Juma <ajuma@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505081}
Former-commit-id: 914b06e605549afd88b2964edc96f87bd4797cbb