ui/compositor/layer_animation_element_unittest.cc
@@ -400,6 +400,28 @@ TEST(LayerAnimationElementTest, AbortTransformElement) {
                           delegate.GetTransformForAnimation());
 }
 
+// Check that an opacity element is not threaded if the start and target values
+// are the same.
+TEST(LayerAnimationElementTest, OpacityElementIsThreaded) {
+  TestLayerAnimationDelegate delegate;
+  float start = 0.0;
+  float target = 1.0;
+  delegate.SetOpacityFromAnimation(start);
+  base::TimeDelta delta = base::TimeDelta::FromSeconds(1);
+  std::unique_ptr<LayerAnimationElement> element =
+      LayerAnimationElement::CreateOpacityElement(target, delta);
+  EXPECT_TRUE(element->IsThreaded(&delegate));
+  element->ProgressToEnd(&delegate);
+  EXPECT_FLOAT_EQ(target, delegate.GetOpacityForAnimation());
+
+  start = 1.0;
+  delegate.SetOpacityFromAnimation(start);
+  element = LayerAnimationElement::CreateOpacityElement(target, delta);
+  EXPECT_FALSE(element->IsThreaded(&delegate));
+  element->ProgressToEnd(&delegate);
+  EXPECT_FLOAT_EQ(target, delegate.GetOpacityForAnimation());
+}
+
 TEST(LayerAnimationElementTest, ToString) {
   float target = 1.0;
   base::TimeDelta delta = base::TimeDelta::FromSeconds(1);
